dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(ns1tools,0.2)
AM_CONFIG_HEADER(config.h)

dnl Always pull in the macros/ directory in aclocal
dnl ACLOCAL="$ACLOCAL -I macros"
dnl AC_SUBST(ACLOCAL)


dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(llabs)

AC_OUTPUT([
	Makefile
])
